# uvwsim

./: .gitignore  CMakeLists.txt  ChangeLog.txt  LICENSE.md  MANIFEST.in  cleanup.sh  pyuvwsim.rst  readme.md  setup.py
cmake/: compiler_options.cmake
doc/: example.c  prototype_uvwsim_api.c
python/: CMakeLists.txt
python/src/: pyuvwsim.c
pyuvwsim/: __init__.py
pyuvwsim/src/: pyuvwsim.c  pyuvwsim.h
src/: uvwsim.c  uvwsim.h
test/: CMakeLists.txt  pyuvwsim_example.ipynb  run_python_tests.sh  test_python_interface.py  test_uvwsim.cpp
test/data/: SKA1_readme.txt
