find_package(PythonLibs 2.7)
find_package(NumPy 1.8)

# If Python is found build the experimental python interface.
if (PYTHONLIBS_FOUND AND NUMPY_FOUND)
    set(NUMPY_VER "${NUMPY_VERSION_MAJOR}.${NUMPY_VERSION_MINOR}")
    set(NUMPY_VER_MIN "1.8")
    if (${NUMPY_VER} VERSION_EQUAL ${NUMPY_VER_MIN} OR ${NUMPY_VER} VERSION_GREATER ${NUMPY_VER_MIN})
        message(STATUS "INFO: Building uvwsim Python interface.")
        set(UVWSIM_PYTHON_API ON PARENT_SCOPE)
        include_directories(${PYTHON_INCLUDE_DIRS})
        include_directories(${NUMPY_INCLUDE_DIRS})
        include_directories(${PROJECT_SOURCE_DIR}/src)
        include_directories(${PROJECT_SOURCE_DIR}/python/src)
        set(name pyuvwsim)
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/pyuvwsim.c
            ${CMAKE_CURRENT_BINARY_DIR}/CMakeFiles/pyuvwsim_.c @ONLY)
        add_library(${name} SHARED ${CMAKE_CURRENT_BINARY_DIR}/CMakeFiles/pyuvwsim_.c)
        target_link_libraries(${name} ${PYTHON_LIBRARIES} uvwsim)
        set_target_properties(${name} PROPERTIES PREFIX "" SUFFIX .so)
    endif()
endif()
